--- a/a/au/auc/auctionsniper.com.html
+++ b/a/au/auc/auctionsniper.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the auctionsniper.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214120155id_/http%3A//auctionsniper.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the auctionsniper.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615141044id_/http%3A//auctionsniper.com/privacy.aspx) for the most accurate reproduction.-->
 
 <html><head>
         <title>
@@ -69,11 +69,11 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
 <area shape="rect" coords="296,0,275,14" href="http://br.auctionsniper.com" privacy.aspx'="">
 </map>
 
-<link href="http://www.auctionsniper.com/default.css" rel="stylesheet">
+<link href="http://auctionsniper.com/default.css" rel="stylesheet">
 <div class="hdr_wrapper">
     <table style="WIDTH: 720px" height="113" cellspacing="0" cellpadding="0" align="center">
         <tbody><tr>
-            <td valign="top" width="92" rowspan="3"><img src="http://www.auctionsniper.com/images/snipelogo.gif"></td>
+            <td valign="top" width="92" rowspan="3"><img src="http://auctionsniper.com/images/snipelogo.gif"></td>
             <td valign="top"><img id="Header1_name_img" src="images/en/name.gif" alt="" border="0" style="height:37px;width:199px;"></td>
             <td valign="bottom" align="right">
                 <p class="hdr_smallprint" style="PADDING-BOTTOM: 5px">&nbsp;&nbsp;&nbsp;<br>
@@ -86,11 +86,11 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
                     <table class="hdr_tabs" cellspacing="0" cellpadding="0">
                         <tbody><tr>
                             <td>
-                                <p id="Header1_home_out_p" class="inactive-tab"><a href="http://www.auctionsniper.com/default.aspx">
+                                <p id="Header1_home_out_p" class="inactive-tab"><a href="http://auctionsniper.com/default.aspx">
                                         <span id="Header1_home_lbl">Home</span></a></p>
                             </td>
                             <td>
-                                <p id="Header1_signup_out_p" class="inactive-tab"><a href="http://www.auctionsniper.com/register.aspx">
+                                <p id="Header1_signup_out_p" class="inactive-tab"><a href="http://auctionsniper.com/register.aspx">
                                         <span id="Header1_signup_lbl">Sign-up</span></a></p>
                             </td>
                             <td>
@@ -98,15 +98,15 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
                                         <span id="Header1_forum_lbl">Community</span></a></p>
                             </td>
                             <td>
-                                <p id="Header1_products_out_p" class="inactive-tab"><a href="http://www.auctionsniper.com/products.aspx">
+                                <p id="Header1_products_out_p" class="inactive-tab"><a href="http://auctionsniper.com/products.aspx">
                                         <span id="Header1_products_lbl">Features</span></a></p>
                             </td>
                             <td>
-                                <p id="Header1_help_out_p" class="inactive-tab"><a href="http://www.auctionsniper.com/help.aspx">
+                                <p id="Header1_help_out_p" class="inactive-tab"><a href="http://auctionsniper.com/help.aspx">
                                         <span id="Header1_help_lbl">Help</span></a></p>
                             </td>
                             <td>
-                                <p class="inactive-tab"><a href="http://www.auctionsniper.com/mysnipes.aspx">
+                                <p class="inactive-tab"><a href="http://auctionsniper.com/mysnipes.aspx">
                                         <span id="Header1_mysnipes_lbl">My Snipes</span></a></p>
                             </td>
                         </tr>
@@ -117,9 +117,9 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
         <tr>
             <td class="hdr_subnav_row" align="right" colspan="2" height="28"><div id="Header1_none_pnl">
 	
-                    <p class="hdr_subnav"><a href="http://www.auctionsniper.com/products.aspx">
-                            <span id="Header1_features_lbl">Features</span></a>&nbsp;|&nbsp;<a href="http://www.auctionsniper.com/testimonials.aspx">
-                            <span id="Header1_testimonial_lbl">Testimonials</span></a>&nbsp;|&nbsp;<a href="http://www.auctionsniper.com/payment.aspx">
+                    <p class="hdr_subnav"><a href="http://auctionsniper.com/products.aspx">
+                            <span id="Header1_features_lbl">Features</span></a>&nbsp;|&nbsp;<a href="http://auctionsniper.com/testimonials.aspx">
+                            <span id="Header1_testimonial_lbl">Testimonials</span></a>&nbsp;|&nbsp;<a href="http://auctionsniper.com/payment.aspx">
                             <span id="Header1_howMuch_lbl">How Much?</span></a></p>
                 
 </div>
@@ -130,7 +130,7 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
         <tr>
             <td align="right" colspan="3" height="21">
                 
-                <p class="hdr_smallprint"><span id="Header1_location_lbl">Select Language</span>:&nbsp;<img height="15" src="http://www.auctionsniper.com/images/flag-map.gif" width="296" usemap="#flagmap" border="0"></p>
+                <p class="hdr_smallprint"><span id="Header1_location_lbl">Select Language</span>:&nbsp;<img height="15" src="http://auctionsniper.com/images/flag-map.gif" width="296" usemap="#flagmap" border="0"></p>
             </td>
         </tr>
     </tbody></table>
@@ -201,19 +201,19 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
             <td align="middle">
                 <font size="1" face="Arial"><b>
 						<!-- <a id="abtus_lnk" href="aboutus.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_about_lnk" class="subdued" href="http://www.auctionsniper.com/aboutus.aspx" target="_top">About Us</a>
+                            <a id="Footer1_about_lnk" class="subdued" href="http://auctionsniper.com/aboutus.aspx" target="_top">About Us</a>
                         | <!-- <a id="term_lnk" href="termsofservice.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_terms_lnk" class="subdued" href="http://www.auctionsniper.com/termsofservice.aspx" target="_top">Terms and Conditions</a>
+                            <a id="Footer1_terms_lnk" class="subdued" href="http://auctionsniper.com/termsofservice.aspx" target="_top">Terms and Conditions</a>
                         | <!-- <a id="contactUs_lnk" href="contactus.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_contact_lnk" class="subdued" href="http://www.auctionsniper.com/contactus.aspx" target="_top">Contact Us</a>
+                            <a id="Footer1_contact_lnk" class="subdued" href="http://auctionsniper.com/contactus.aspx" target="_top">Contact Us</a>
                         | <!-- <a id="partner_lnk" href="partners.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_partners_lnk" class="subdued" href="http://www.auctionsniper.com/partners.aspx" target="_top">Partners</a>
+                            <a id="Footer1_partners_lnk" class="subdued" href="http://auctionsniper.com/partners.aspx" target="_top">Partners</a>
                         | <!-- <a href="http://community.auctionsniper.com" target="_top" class="subdued"> -->
                             <a id="Footer1_community_lnk" class="subdued" href="http://community.auctionsniper.com" target="_top">Forum</a>
                         | <!-- <a id="payment_lnk" href="payment.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_payments_lnk" class="subdued" href="http://www.auctionsniper.com/payment.aspx" target="_top">Payments</a>
+                            <a id="Footer1_payments_lnk" class="subdued" href="http://auctionsniper.com/payment.aspx" target="_top">Payments</a>
                         | <!-- <a id="privacyStatement_lnk" href="privacy.aspx" target="_top" class="subdued"> -->
-                            <a id="Footer1_privacy_lnk" class="subdued" href="http://www.auctionsniper.com/privacy.aspx" target="_top">Privacy</a>
+                            <a id="Footer1_privacy_lnk" class="subdued" href="http://auctionsniper.com/privacy.aspx" target="_top">Privacy</a>
                         </b></font>
             </td>
         </tr>
@@ -223,7 +223,7 @@ window.open(url,"infoWin", "location=no,toolbar=no,directories=no,status=no,menu
         </tr>
         <tr>
             <td align="middle"><font size="1" face="Arial"><span id="Footer1_copyrightText_lbl">Copyright</span>© 
-                    2001-2005
+                    2001-2006
                     AuctionSniper.com.
                     <span id="Footer1_rightsReservedText_lbl">All rights reserved.</span>
                     <br>
