--- a/p/pc/pcw/pcwin.com.html
+++ b/p/pc/pcw/pcwin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pcwin.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214125321id_/http%3A//www.pcwin.com/privacy_statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pcwin.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615141846id_/http%3A//pcwin.com/privacy_statement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3O//DTD HTML 3.2//EN"><html><head>
 <link rel="stylesheet" href="/default.css">
@@ -34,13 +34,13 @@
 
 HTTP/1.1 200 OK
 Server: Microsoft-IIS/5.0
-Date: Wed, 14 Dec 2005 12:53:21 GMT
+Date: Thu, 15 Jun 2006 14:18:46 GMT
 X-Powered-By: ASP.NET
 Content-Type: text/html
 
 
 
-<a href="/cgi-bin/ajrotate.dll?img_click=/root" target="_blank"><img src="/cgi-bin/ajrotate.dll?img_only=/root&amp;nocache=148872" border="1" alt="Ad Banner" width="468" height="60"></a>
+<a href="/cgi-bin/ajrotate.dll?img_click=/root" target="_blank"><img src="/cgi-bin/ajrotate.dll?img_only=/root&amp;nocache=746968" border="1" alt="Ad Banner" width="468" height="60"></a>
 
 
 </td></tr></tbody></table><br>
