--- a/r/ri/rid/ridgid.com.html
+++ b/r/ri/rid/ridgid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ridgid.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215003221id_/http%3A//www.ridgid.com/Tools/Privacy-Policy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ridgid.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615141853id_/http%3A//www.ridgid.com/Tools/Privacy-Policy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -108,10 +108,11 @@ window.name = "MainWindow"
 <!--''Start Menu Table''-->
 						<table width="100%" height="700" border="0" cellspacing="0" cellpadding="0" class="bodytable">
 							
+							
 							<tbody><tr>
 								<td>&nbsp;&nbsp;</td>
 								<td height="100%" colspan="2" align="left" valign="top"><br>
-							<div id="navcontainer"><ul id="navlist"><li><a href="http://www.paulich-ridgid.com" target="_blank">RIDGID Merchandise</a></li><li><a href="/Tools/Privacy-Policy/index.htm">Privacy Policy</a></li><li><a href="http://www.ridgid.com/sitemap.html" target="_blank">Sitemap</a></li><li><a href="/Tools/Video-News/index.htm">Video News Clips</a></li><li><a href="/Tools/Visitor-Registration/index.htm">Visitor Registration</a></li><li><a href="/Tools/Legal/index.htm">Legal</a></li><li><a href="/Tools/Calendar/index.htm">RIDGID Calendar</a></li><li><a href="/Tools/Games/index.htm">Games</a></li><li><a href="/Tools/News/index.htm">News</a></li><li><a href="/Tools/End-User-Surveys/index.htm">End User Surveys</a></li><li><a href="/Tools/Jobs/index.htm">Career Opportunities</a></li><li><a href="http://www.ridgidconnect.com" target="_blank">RIDGID Distributor Portal</a></li></ul></div><div align="center" class="topMenu"><form name="listform" action="http://www.ridgid.com/Tools/661/" method="POST" onsubmit="return VerifyFormEmail();"> <font color="Black" face="Arial"><b>Join our mailing list!</b></font><br><a href="http://www.ridgid.com/Tools/Privacy-Policy/index.htm" class="poll2"><font size="-2" face="Arial">Privacy Policy</font></a><br><input type="text" name="Email" value="Your Email Here" size="16" maxlength="50" onfocus="doClearField(this)"><br><input type="image" name="Submit" src="http://www.ridgid.com/images/signup.gif" alt="Sign Me Up!"></form></div><form method="post" action="http://www.ridgid.com/Tools/647/"><table border="0" cellspacing="1" cellpadding="3" align="center"><tbody><tr><td align="center" valign="bottom"><input type="text" size="15" name="criteria" class="CCtextbox">&nbsp;<input type="submit" value="Search" width="31" height="22" class="CCsubmit"></td></tr></tbody></table></form><a href="JavaScript:sendlink()"><font color="White"><img src="/images/email.gif" border="0"></font></a><font color="White"><br><br><a href="http://www.ridgid.com/Tools/Utility-Locating/index.htm"><img src="/images/promos/SR20PromoBanner.jpg" alt="" width="180" height="79" border="0"></a><br><br><a href="http://www.ridgidforum.com/cgi-bin/ultimatebb.cgi"><img src="/images/promos/forums.jpg" alt="" width="180" height="79" border="0"></a><br><br><a href="http://www.ridgid.com/Tools/SeeSnake/index.htm"><img src="/images/promos/seesnakeplus.gif" alt="" width="180" height="79" border="0"></a><br><br>
+							<div id="navcontainer"><ul id="navlist"><li><a href="http://www.paulich-ridgid.com" target="_blank">RIDGID Merchandise</a></li><li><a href="/Tools/Privacy-Policy/index.htm">Privacy Policy</a></li><li><a href="http://www.ridgid.com/sitemap.html" target="_blank">Sitemap</a></li><li><a href="/Tools/Video-News/index.htm">Video News Clips</a></li><li><a href="/Tools/Visitor-Registration/index.htm">Visitor Registration</a></li><li><a href="/Tools/Legal/index.htm">Legal</a></li><li><a href="/Tools/Calendar/index.htm">RIDGID Calendar</a></li><li><a href="/Tools/Games/index.htm">Games</a></li><li><a href="/Tools/News/index.htm">News</a></li><li><a href="/Tools/End-User-Surveys/index.htm">End User Surveys</a></li><li><a href="/Tools/Jobs/index.htm">Career Opportunities</a></li><li><a href="http://www.ridgidconnect.com" target="_blank">RIDGID Distributor Portal</a></li><li><a href="/Tools/Jobcast/index.htm">Jobcast<img src="/images/new.gif" alt="" width="31" height="13" border="0"></a></li><li><a href="/Tools/Trade-Shows/index.htm">Trade Shows<img src="/images/new.gif" alt="" width="31" height="13" border="0"></a></li></ul></div><div align="center" class="topMenu"><form name="listform" action="http://www.ridgid.com/Tools/661/" method="POST" onsubmit="return VerifyFormEmail();"> <font color="Black" face="Arial"><b>Join our mailing list!</b></font><br><a href="http://www.ridgid.com/Tools/Privacy-Policy/index.htm" class="poll2"><font size="-2" face="Arial">Privacy Policy</font></a><br><input type="text" name="Email" value="Your Email Here" size="16" maxlength="50" onfocus="doClearField(this)"><br><input type="image" name="Submit" src="http://www.ridgid.com/images/signup.gif" alt="Sign Me Up!"></form></div><form method="post" action="http://www.ridgid.com/Tools/647/"><table border="0" cellspacing="1" cellpadding="3" align="center"><tbody><tr><td align="center" valign="bottom"><input type="text" size="15" name="criteria" class="CCtextbox">&nbsp;<input type="submit" value="Search" width="31" height="22" class="CCsubmit"></td></tr></tbody></table></form><a href="JavaScript:sendlink()"><font color="White"><img src="/images/email.gif" border="0"></font></a><font color="White"><br><br><a href="http://www.ridgidforum.com/cgi-bin/ultimatebb.cgi"><img src="/images/promos/forums.jpg" alt="" width="180" height="79" border="0"></a><br><br><a href="http://www.ridgid.com/Tools/100B-Pressing-Tool/index.htm"><img src="/images/promos/100BBanner.jpg" alt="" width="180" height="79" border="0"></a><br><br>
 							</font></td>
 						</tr>
 					</tbody></table>
@@ -131,21 +132,21 @@ window.name = "MainWindow"
 
 <table width="550" cellspacing="4" cellpadding="4"><tbody><tr><td>
 <p><strong></strong></p><div align="center"><strong>RIDGID.com Privacy Policy</strong></div><p></p>
-Overview <br>
+<strong>Overview</strong><br>
 <p>Ridge Tool is aware of the need to address Internet privacy issues and we believe you should be aware of how we intend to treat any information about you that we might receive on the Internet as a result of your visit to the site. </p>
 
-Information About Ridge Tool On-Line Visitors<br> 
+<strong>Information About Ridge Tool On-Line Visitors</strong><br> 
 <p>You can visit our website without telling us who you are or revealing any information about yourself. Our web servers collect the domain names, not the e-mail addresses, of visitors. In general, we gather information about users of the site collectively in order to determine, for example, which areas users access more frequently and which Materials users access the most. This information helps us to determine what is most beneficial for our users, and how we can continually create a better overall experience for our users by improving the content of the site.</p> 
 
 <p>There are times however, when we may need information from you, such as your name and address. Customarily, the personal information Ridge Tool obtains is used only to respond to inquiries, product registration or to be registration for our electronic mailing list. We may also ask you to voluntarily provide us with information for market research such as, your interests, demographics, and experience with our products. <strong>We do not share this information with other companies or organizations.</strong></p>
 
-Cookies<br>
+<strong>Cookies</strong><br>
 <p>There is a technology called "cookies" which is an element of data that a website can send to your browser which may then be stored on your machine. Some site pages use cookies so that we can better serve you when you return to our site. You can set your browser to notify you when you receive a cookie, giving the chance to decide whether to accept it. </p>
 
-Web site Links&nbsp; 
+<strong>Web site Links</strong>&nbsp; 
 <p>Ridgid.com may contain links to other Web sites such as distributors and sales representatives. While Ridge Tool tries to link only to sites that share its high standards and respect for privacy, we cannot take responsibility for the content or the privacy practices employed by other sites. </p>
 
-Changes<br>
+<strong>Changes</strong><br>
 <p>If at anytime Ridge Tool changes its privacy commitment, we will post those changes here so that you will know what information we gather and how we might use that information. </p></td></tr></tbody></table>
 
 
@@ -171,7 +172,7 @@ Changes<br>
 					<tbody><tr>
 					    <td align="center"><a href="/MenuDriver.asp?ParentID=RIDGID-Locations&amp;Color=" class="breadcrumb">Where to Buy</a>&nbsp;&nbsp;</td>
 					    <td align="center"><a href="http://www.ridgid.com/Tools/Preferred-Online-Vendors/" class="breadcrumb">Online Vendors</a>&nbsp;&nbsp;</td>
-					    <td align="center"><a href="http://www.ridgidforum.com" target="_blank" class="breadcrumb">RIDGID Forum</a>&nbsp;&nbsp;</td>
+					    <td align="center"><a href="http://www.ridgidforum.com/forum/index.php" target="_blank" class="breadcrumb">RIDGID Forum</a>&nbsp;&nbsp;</td>
 					    <td align="center"><a href="http://www.ridgid.com/Tools/Visitor-Registration/" class="breadcrumb">Visitor Registration</a>&nbsp;&nbsp;</td>
 					    <td align="center"><a href="http://www.ridgid.com/Tools/Contact-Us/" class="breadcrumb">Contact Us</a>&nbsp;&nbsp;</td>
 					</tr>
@@ -191,7 +192,7 @@ Changes<br>
   
   <td id="leftbutton" width="92" align="center" height="40" background="/Images/button_red_dark.gif" onmouseover="swapMe(this,'/Images/button_red.gif','/Images/button_red_dark.gif')" onmouseout="swapMe(this,'/Images/button_red_dark.gif','/Images/button_red.gif')"><a href="/Tools/Support/"><font face="Arial,Helvetica,sans-serif" size="1" color="#FFFFFF"><strong>SUPPORT</strong></font></a></td>
   
-   <td id="leftbutton" width="92" align="center" height="40" background="/Images/button_red_dark.gif" onmouseover="swapMe(this,'/Images/button_red.gif','/Images/button_red_dark.gif')" onmouseout="swapMe(this,'/Images/button_red_dark.gif','/Images/button_red.gif')"><a href="http://www.ridgidforum.com/cgi-bin/ultimatebb.cgi" target="_blank"><font face="Arial,Helvetica,sans-serif" size="1" color="#FFFFFF"><strong>FORUM</strong></font></a></td>
+   <td id="leftbutton" width="92" align="center" height="40" background="/Images/button_red_dark.gif" onmouseover="swapMe(this,'/Images/button_red.gif','/Images/button_red_dark.gif')" onmouseout="swapMe(this,'/Images/button_red_dark.gif','/Images/button_red.gif')"><a href="http://www.ridgidforum.com/forum/index.php" target="_blank"><font face="Arial,Helvetica,sans-serif" size="1" color="#FFFFFF"><strong>FORUM</strong></font></a></td>
   
   <td id="leftbutton" width="92" align="center" height="40" background="/Images/button_red_dark.gif" onmouseover="swapMe(this,'/Images/button_red.gif','/Images/button_red_dark.gif')" onmouseout="swapMe(this,'/Images/button_red_dark.gif','/Images/button_red.gif')"><a href="/Tools/Where-To-Buy/"><font face="Arial,Helvetica,sans-serif" size="1" color="#FFFFFF"><strong>WHERE TO BUY</strong></font></a></td>
   
