--- a/s/si/sik/sikhnet.com.html
+++ b/s/si/sik/sikhnet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sikhnet.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212110128id_/http%3A//www.sikhnet.com/s/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sikhnet.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615142240id_/http%3A//www.sikhnet.com/s/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Sikhnet's Privacy Policy</title></head>
@@ -53,20 +53,20 @@ inp.value="";
 </tbody></table>
 
 <table cellspacing="0" cellpadding="0" width="780" border="0">
-<tbody><tr valign="top"><td width="307" bgcolor="#E78610"><img src="/sikhnet/register.nsf/sns-tb.jpg!OpenImageResource" width="58" height="44" alt=""><img src="/sikhnet/register.nsf/commt.gif!OpenImageResource" width="195" height="44" alt="Community"></td><td width="196" bgcolor="#E78610"><img src="/icons/ecblank.gif" border="0" height="1" width="1" alt=""></td><td width="291" bgcolor="#E78610"><br><div align="right">
+<tbody><tr valign="top"><td width="307" bgcolor="#E78610"><img src="/sikhnet/register.nsf/sns-tb.jpg!OpenImageResource" width="58" height="44"><img src="/sikhnet/register.nsf/commt.gif!OpenImageResource" width="195" height="44" alt="Community"></td><td width="196" bgcolor="#E78610"><img width="1" height="1" src="/icons/ecblank.gif" border="0" alt=""></td><td width="291" bgcolor="#E78610"><br><div align="right">
 <table border="0" cellspacing="0" cellpadding="0">
 <tbody><tr valign="top"><td width="139" valign="middle"><div align="center"><a href="http://www.sikhnet.com"><b><font size="1" face="Verdana">home</font></b></a><b><font size="1" face="Verdana"> | </font></b><a href="http://www.sikhnet.com/Membership"><b><font size="1" face="Verdana">membership</font></b></a></div></td><td width="113" valign="middle"><font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 <input name="Query" size="8" value="SEARCH" onfocus="setBlank(this)"></font></td></tr>
 </tbody></table>
-</div><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""></td></tr>
+</div><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"></td></tr>
 </tbody></table>
 
 <table width="780" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr valign="top"><td width="714" bgcolor="#000000" colspan="2"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""></td></tr>
+<tbody><tr valign="top"><td width="714" bgcolor="#000000" colspan="2"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"></td></tr>
 
-<tr valign="top"><td width="132"><div align="right"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""></div></td><td width="582">
+<tr valign="top"><td width="132"><div align="right"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"></div></td><td width="582">
 <table cellpadding="4" border="0" cellspacing="0">
-<tbody><tr valign="top"><td width="59" bgcolor="#FFFFFF"><div align="center"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""></div></td><td width="516" bgcolor="#C0C0C0"><div align="center"><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=Email&amp;Url=http://mail.khalsa.com" class="submenu"><font size="1" face="Verdana">my e-mail</font></a><font size="1" face="Verdana"> | </font><a href="/sikhnet/REGISTER.NSF/ClickThrough!OpenAgent&amp;Site=Discs&amp;Url=http://www.sikhnet.com/sikhnet/discussion.nsf/by+Topic!OpenView" class="submenu"><font size="1" face="Verdana">discussion</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=SikhMatrimonials&amp;Url=http://www.sikhmatrimonials.com" class="submenu"><font size="1" face="Verdana">matrimonials</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=Chat&amp;Url=http://www.sikhnet.com/chat" class="submenu"><font size="1" face="Verdana">live chat</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=Radio&amp;Url=http://www.sikhnet.com/sikhnet/register.nsf/ram/SikhnetRadio/%24File/listen.ram" class="submenu"><font size="1" face="Verdana">radio</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=DailyHukam&amp;Url=http://www.sikhnet.com/hukam" class="submenu"><font size="1" face="Verdana">hukamnama</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=SikhSeek&amp;Url=http://www.sikhseek.com" class="submenu"><font size="1" face="Verdana">sikhseek</font></a><font size="1" face="Verdana"> | </font><a href="/News"><font size="1" face="Verdana">News</font></a></div></td></tr>
+<tbody><tr valign="top"><td width="59" bgcolor="#FFFFFF"><div align="center"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"></div></td><td width="516" bgcolor="#C0C0C0"><div align="center"><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=Email&amp;Url=http://mail.khalsa.com" class="submenu"><font size="1" face="Verdana">my e-mail</font></a><font size="1" face="Verdana"> | </font><a href="/sikhnet/REGISTER.NSF/ClickThrough!OpenAgent&amp;Site=Discs&amp;Url=http://www.sikhnet.com/sikhnet/discussion.nsf/by+Topic!OpenView" class="submenu"><font size="1" face="Verdana">discussion</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=SikhMatrimonials&amp;Url=http://www.sikhmatrimonials.com" class="submenu"><font size="1" face="Verdana">matrimonials</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=Chat&amp;Url=http://www.sikhnet.com/chat" class="submenu"><font size="1" face="Verdana">live chat</font></a><font size="1" face="Verdana"> | </font><a href="http://www.sikhnet.com/s/sikhnetradio" class="submenu"><font size="1" face="Verdana">radio</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=DailyHukam&amp;Url=http://www.sikhnet.com/hukam" class="submenu"><font size="1" face="Verdana">hukamnama</font></a><font size="1" face="Verdana"> | </font><a href="/Sikhnet/Register.nsf/ClickThrough!OpenAgent&amp;Site=SikhSeek&amp;Url=http://www.sikhseek.com" class="submenu"><font size="1" face="Verdana">sikhseek</font></a><font size="1" face="Verdana"> | </font><a href="/News"><font size="1" face="Verdana">News</font></a></div></td></tr>
 </tbody></table>
 </td></tr>
 </tbody></table>
@@ -92,7 +92,7 @@ inp.value="";
 <input name="Footer" value="SearchFooter.txt" type="hidden">
 <br>
 </form><table border="0" cellspacing="0" cellpadding="0"><tbody><tr valign="top"><td width="174" valign="top"><img src="/icons/ecblank.gif" border="0" height="1" width="1" alt=""></td><td width="444" valign="middle"><b><font size="5" face="Verdana">PRIVACY POLICY</font></b>
-<p><img src="/sikhnet/register.nsf/1grey.gif!OpenImageResource" width="369" height="1" alt=""><br>
+<p><img src="/sikhnet/register.nsf/1grey.gif!OpenImageResource" width="369" height="1"><br>
 <br>
 <b><font size="2" face="Arial">Privacy Statement for Sikhnet</font></b>
 </p><p><font size="2" face="Arial">Sikhnet has created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses our information gathering and dissemination practices for this website: Sikhnet. </font>
@@ -146,9 +146,9 @@ inp.value="";
 
 <br>
 
-</p><div align="center"><a href="http://www.sikhnet.com/s/SikhnetHistory"><u><font size="1" face="Verdana">History</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com/Donation"><u><font size="1" face="Verdana">Donation</font></u></a><font size="1" face="Verdana"> -  </font><a href="http://www.sikhnet.com/s/PrivacyPolicy"><u><font size="1" face="Verdana">Privacy</font></u></a><font size="1" face="Verdana"> - </font><a href="/s/FAQ"><u><font size="1" face="Verdana">Help</font></u></a><font size="1" face="Verdana"> - </font><a href="/Registration"><u><font size="1" face="Verdana">Registration</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com"><u><font size="1" face="Verdana">Home</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com/search"><u><font size="1" face="Verdana">Search</font></u></a><br>
+</p><div align="center"><a href="http://www.sikhnet.com/s/SikhnetHistory"><u><font size="1" face="Verdana">History</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com/Donation"><u><font size="1" face="Verdana">Donation</font></u></a><font size="1" face="Verdana"> - </font><a href="https://www.sikhnet.com/sikhnet/sponsors.nsf/Wizard!openForm"><font size="1" face="Verdana">Sponsorships</font></a><font size="1" face="Verdana"> -  </font><a href="http://www.sikhnet.com/s/PrivacyPolicy"><u><font size="1" face="Verdana">Privacy</font></u></a><font size="1" face="Verdana"> - </font><a href="/s/FAQ"><u><font size="1" face="Verdana">Help</font></u></a><font size="1" face="Verdana"> - </font><a href="/Registration"><u><font size="1" face="Verdana">Registration</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com"><u><font size="1" face="Verdana">Home</font></u></a><font size="1" face="Verdana"> - </font><a href="http://www.sikhnet.com/search"><u><font size="1" face="Verdana">Search</font></u></a><br>
 <b><font size="1" face="Verdana"><br>
-</font></b><font size="1" face="Verdana">Copyright © 1995 - </font><font size="1" face="Verdana">2005</font><font size="1" face="Verdana"> SikhNet, All Rights Reserved</font>.<br>
+</font></b><font size="1" face="Verdana">Copyright © 1995 - </font><font size="1" face="Verdana">2006</font><font size="1" face="Verdana"> SikhNet, All Rights Reserved</font>.<br>
 <br>
 <br>
 
@@ -163,11 +163,11 @@ inp.value="";
 <br>
 
 <table width="780" cellpadding="15" border="0" cellspacing="0">
-<tbody><tr valign="top"><td width="186" bgcolor="#942400" valign="bottom"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""></td><td width="540" bgcolor="#942400" valign="bottom">
+<tbody><tr valign="top"><td width="186" bgcolor="#942400" valign="bottom"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"></td><td width="540" bgcolor="#942400" valign="bottom">
 <table border="0" cellspacing="0" cellpadding="0">
 <tbody><tr valign="top"><td width="87" valign="bottom"><img src="/sikhnet/register.nsf/comm.gif!OpenImageResource" width="86" height="17" alt="Community"></td><td width="74" valign="bottom"><a href="/Sikh"><img src="/sikhnet/register.nsf/sikh.gif!OpenImageResource" width="74" height="17" alt="Sikhism" border="0"></a></td><td width="74" valign="bottom"><a href="/Music"><img src="/sikhnet/register.nsf/gurb.gif!OpenImageResource" width="73" height="17" alt="Gurbani" border="0"></a></td><td width="86" valign="bottom"><a href="/s/Downloads"><img src="/sikhnet/register.nsf/down.gif!OpenImageResource" width="86" height="17" alt="Downloads" border="0"></a></td><td width="68" valign="bottom"><a href="/s/Youth+And+Children"><img src="/sikhnet/register.nsf/youth.gif!OpenImageResource" width="68" height="17" alt="Youth" border="0"></a></td><td width="83" valign="bottom"><a href="/s/Bazaar"><img src="/sikhnet/register.nsf/shop.gif!OpenImageResource" width="82" height="17" alt="Shopping" border="0"></a></td></tr>
 </tbody></table>
-</td><td width="120" bgcolor="#942400" valign="bottom"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1" alt=""><br>
+</td><td width="120" bgcolor="#942400" valign="bottom"><img src="/sikhnet/register.nsf/1x1.gif!OpenImageResource" width="1" height="1"><br>
 </td></tr>
 </tbody></table>
 <script src="/__utm.js" type="text/javascript"></script>
